fixed the issue with the alignment of the grids and changed the color of the bug

--- a/input.css
+++ b/input.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 @theme{
-  --text*:initial;  
+  --text-*:initial;  
   --text-xs: clamp(0.5425rem, 0.5086rem + 0.1695vw, 0.64rem);
   --text-sm: clamp(0.7813rem, 0.7052rem + 0.3804vw, 1rem);
   --text-base:clamp(0.9375rem, 0.8288rem + 0.5435vw, 1.25rem);
@@ -15,10 +15,10 @@
 --text-6xl:clamp(2.7994rem, 2.1145rem + 3.4244vw, 4.7684rem);
 --text-7xl:clamp(3.3592rem, 2.4545rem + 4.5239vw, 5.9605rem);
 
---color-grass: oklch(0.67 0.1 116 / 71%);
+--color-grass: oklch(0.79 0.1623 128.21 / 71%);
 --color-fire: oklch(0.58 0.245 27.325 / 71%);
 --color-water: oklch(0.51 0.262 276.966 / 71%);
---color-bug: oklch(0.67 0.1 116 / 71%);
+--color-bug: oklch(0.65 0.136 130.87 / 71%);
 --color-flying: oklch(0.67 0.1 116 / 71%);
 --color-poison: oklch(0.71 0.123 318.79 / 74%);
 --color-normal: oklch(0.49 0.03 256.802 / 71%);
@@ -37,6 +37,9 @@
 }
 .grass, .bug{
     background-color: var(--color-grass);
+}
+.bug{
+    background-color: var(--color-bug);
 }
 .fire{
     background-color: var(--color-fire);
