--- a/styles.css
+++ b/styles.css
@@ -12,27 +12,23 @@
     --color-gray-700: oklch(37.3% 0.034 259.733);
     --color-gray-800: oklch(27.8% 0.033 256.848);
     --spacing: 0.25rem;
-    --container-5xl: 64rem;
     --container-6xl: 72rem;
-    --text-base: clamp(0.9375rem, 0.8288rem + 0.5435vw, 1.25rem);
-    --text-base--line-height: calc(1.5 / 1);
-    --text-lg: clamp(1.125rem, 0.9728rem + 0.7609vw, 1.5625rem);
-    --text-lg--line-height: calc(1.75 / 1.125);
-    --text-xl: clamp(1.35rem, 1.1402rem + 1.0489vw, 1.9531rem);
-    --text-xl--line-height: calc(1.75 / 1.25);
     --radius-xl: 0.75rem;
     --radius-2xl: 1rem;
     --radius-3xl: 1.5rem;
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
     --animate-spin: spin 1s linear infinite;
     --animate-pulse: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-    --default-transition-duration: 150ms;
-    --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
-    --color-grass: oklch(0.67 0.1 116 / 71%);
+    --text-base: clamp(0.9375rem, 0.8288rem + 0.5435vw, 1.25rem);
+    --text-lg: clamp(1.125rem, 0.9728rem + 0.7609vw, 1.5625rem);
+    --text-xl: clamp(1.35rem, 1.1402rem + 1.0489vw, 1.9531rem);
+    --text-3xl: clamp(1.62rem, 1.3343rem + 1.4285vw, 2.4414rem);
+    --color-grass: oklch(0.79 0.1623 128.21 / 71%);
     --color-fire: oklch(0.58 0.245 27.325 / 71%);
     --color-water: oklch(0.51 0.262 276.966 / 71%);
+    --color-bug: oklch(0.65 0.136 130.87 / 71%);
     --color-poison: oklch(0.71 0.123 318.79 / 74%);
     --color-normal: oklch(0.49 0.03 256.802 / 71%);
     --color-rock: oklch(0.6 0.1224 96.22 / 78.75%);
@@ -238,6 +234,9 @@
       max-width: 96rem;
     }
   }
+  .my-4 {
+    margin-block: calc(var(--spacing) * 4);
+  }
   .my-5 {
     margin-block: calc(var(--spacing) * 5);
   }
@@ -246,6 +245,9 @@
   }
   .my-9 {
     margin-block: calc(var(--spacing) * 9);
+  }
+  .mt-5 {
+    margin-top: calc(var(--spacing) * 5);
   }
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
@@ -283,9 +285,6 @@
   .w-full {
     width: 100%;
   }
-  .max-w-5xl {
-    max-width: var(--container-5xl);
-  }
   .max-w-6xl {
     max-width: var(--container-6xl);
   }
@@ -307,9 +306,6 @@
   .flex-col {
     flex-direction: column;
   }
-  .flex-wrap {
-    flex-wrap: wrap;
-  }
   .items-center {
     align-items: center;
   }
@@ -327,9 +323,6 @@
   }
   .gap-5 {
     gap: calc(var(--spacing) * 5);
-  }
-  .gap-6 {
-    gap: calc(var(--spacing) * 6);
   }
   .place-self-center {
     place-self: center;
@@ -401,17 +394,17 @@
   .text-center {
     text-align: center;
   }
+  .text-3xl {
+    font-size: var(--text-3xl);
+  }
   .text-base {
     font-size: var(--text-base);
-    line-height: var(--tw-leading, var(--text-base--line-height));
   }
   .text-lg {
     font-size: var(--text-lg);
-    line-height: var(--tw-leading, var(--text-lg--line-height));
   }
   .text-xl {
     font-size: var(--text-xl);
-    line-height: var(--tw-leading, var(--text-xl--line-height));
   }
   .break-normal {
     overflow-wrap: normal;
@@ -432,6 +425,9 @@
   .text-gray-800 {
     color: var(--color-gray-800);
   }
+  .uppercase {
+    text-transform: uppercase;
+  }
   .opacity-50 {
     opacity: 50%;
   }
@@ -446,11 +442,6 @@
   .shadow-md {
     --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .transition {
-    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
   .ease-in-out {
     --tw-ease: var(--ease-in-out);
@@ -498,9 +489,19 @@
       }
     }
   }
+  .sm\:my-0 {
+    @media (width >= 40rem) {
+      margin-block: calc(var(--spacing) * 0);
+    }
+  }
   .sm\:mb-0 {
     @media (width >= 40rem) {
       margin-bottom: calc(var(--spacing) * 0);
+    }
+  }
+  .sm\:flex {
+    @media (width >= 40rem) {
+      display: flex;
     }
   }
   .sm\:h-72 {
@@ -523,6 +524,11 @@
       grid-template-columns: repeat(2, minmax(0, 1fr));
     }
   }
+  .sm\:flex-col {
+    @media (width >= 40rem) {
+      flex-direction: column;
+    }
+  }
   .sm\:flex-row {
     @media (width >= 40rem) {
       flex-direction: row;
@@ -541,19 +547,16 @@
   .sm\:text-base {
     @media (width >= 40rem) {
       font-size: var(--text-base);
-      line-height: var(--tw-leading, var(--text-base--line-height));
     }
   }
   .sm\:text-lg {
     @media (width >= 40rem) {
       font-size: var(--text-lg);
-      line-height: var(--tw-leading, var(--text-lg--line-height));
     }
   }
   .sm\:text-xl {
     @media (width >= 40rem) {
       font-size: var(--text-xl);
-      line-height: var(--tw-leading, var(--text-xl--line-height));
     }
   }
   .md\:grid-cols-4 {
@@ -564,12 +567,14 @@
   .md\:text-lg {
     @media (width >= 48rem) {
       font-size: var(--text-lg);
-      line-height: var(--tw-leading, var(--text-lg--line-height));
     }
   }
 }
 .grass, .bug {
   background-color: var(--color-grass);
+}
+.bug {
+  background-color: var(--color-bug);
 }
 .fire {
   background-color: var(--color-fire);
